; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_subr.c_tcp_tfo_gen_cookie.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_tcp_subr.c_tcp_tfo_gen_cookie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inpcb = type { i32, i32, i32 }

@CCAES_BLOCK_SIZE = common dso_local global i32 0, align 4
@tfo_ctx = common dso_local global i32 0, align 4
@INP_IPV6 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tcp_tfo_gen_cookie(%struct.inpcb* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.inpcb*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.inpcb* %0, %struct.inpcb** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i32, i32* @CCAES_BLOCK_SIZE, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %7, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %8, align 8
  %13 = load i64, i64* %6, align 8
  %14 = load i32, i32* @CCAES_BLOCK_SIZE, align 4
  %15 = sext i32 %14 to i64
  %16 = icmp eq i64 %13, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @VERIFY(i32 %17)
  %19 = getelementptr inbounds i32, i32* %12, i64 0
  %20 = load i32, i32* @CCAES_BLOCK_SIZE, align 4
  %21 = call i32 @bzero(i32* %19, i32 %20)
  %22 = load i32*, i32** %5, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 0
  %24 = load i32, i32* @CCAES_BLOCK_SIZE, align 4
  %25 = call i32 @bzero(i32* %23, i32 %24)
  %26 = load %struct.inpcb*, %struct.inpcb** %4, align 8
  %27 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %26, i32 0, i32 1
  %28 = call i32 @memcpy(i32* %12, i32* %27, i32 4)
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @aes_encrypt_cbc(i32* %12, i32* null, i32 1, i32* %29, i32* @tfo_ctx)
  %31 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %31)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @VERIFY(i32) #2

declare dso_local i32 @bzero(i32*, i32) #2

declare dso_local i32 @memcpy(i32*, i32*, i32) #2

declare dso_local i32 @aes_encrypt_cbc(i32*, i32*, i32, i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
